# CourseWork

./: .gitignore  CMakeLists.txt  ErrorList.txt  README.md  compile.c  functions.c  functions.h  main.c  menu.c  menu.c.old  menu.h  menu.h.old  types.h
